2001-11-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-data-model.[ch] (gda_data_model_get_column_title): new function

	* Makefile.am: don't install headers in $includedir/gnome-2.0

	* gda-value.c (gda_value_new): return the created structure

	* gda-data-model-list.c (gda_data_model_list_get_type): this class
	derives from GdaDataModel, not GObject

	* gda-data-model.c (gda_data_model_get_n_rows): removed the extra
	'_list' in the function name

	* gda-config.c (gda_config_get_provider_list): add the retrieved
	items to the list to be returned or we'll allways return NULL!
	(activation_property_to_list): g_strdup the string to be added to
	the returned GList

2001-11-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-command.c (gda_command_new): s/gda_command_get_type/
	gda_command_set_gdatype

	* Makefile.am: added gda-log.[ch] to list of SOURCES

	* gda-server.c (factory_callback): add all created componentes to
	our private list, and connect to their "destroy" signal, so that we
	can keep track of all components, and terminate when there are no
	more
	(component_destroyed_cb): callback function. When no more components
	exist, emit the LAST_CLIENT_GONE signal

	* gda-row.[ch]: new files

	* gda-parameter.c (free_hash_param): added function body
	(gda_parameter_list_add_parameter): added missing function

	* gda-server-recordset.c (impl_Recordset_moveFirst):
	(impl_Recordset_moveNext):
	(impl_Recordset_movePrevious):
	(impl_Recordset_moveLast):
	(impl_Recordset_fetch): implemented

	* gda-value.c (gda_value_copy): new function

2001-11-01  Rodrigo Moya <rodrigo@gnome-db.org>

	* new version of the libraries, just all the stuff in a
	libgda library