@@ -1,4 +1,4 @@
-/* GDA client library
+/* GDA library
  * Copyright (C) 1998-2001 The Free Software Foundation
  *
  * AUTHORS:
@@ -22,6 +22,7 @@
  */
 
 #include <libgda/gda-client.h>
+#include <libgda/gda-config.h>
 #include <libgda/gda-log.h>
 #include <bonobo/bonobo-i18n.h>
 #include <bonobo/bonobo-exception.h>
@@ -30,8 +31,7 @@
 #define PARENT_TYPE BONOBO_X_OBJECT_TYPE
 
 struct _GdaClientPrivate {
-	gchar *iid;
-	GNOME_Database_Provider corba_provider;
+	GHashTable *providers;
 	GList *connections;
 };
 
@@ -53,6 +53,8 @@ connection_finalized_cb (GObject *object, gpointer user_data)
 
 	g_return_if_fail (GDA_IS_CONNECTION (cnc));
 	g_return_if_fail (GDA_IS_CLIENT (client));
+
+	client->priv->connections = g_list_remove (client->priv->connections, cnc);
 }
 
 /*
@@ -92,9 +94,22 @@ gda_client_init (GdaClient *client, GdaClientClass *klass)
 	g_return_if_fail (GDA_IS_CLIENT (client));
 
 	client->priv = g_new0 (GdaClientPrivate, 1);
-	client->priv->iid = NULL;
-	client->priv->corba_provider = CORBA_OBJECT_NIL;
+	client->priv->providers = g_hash_table_new (g_str_hash, g_str_equal);
 	client->priv->connections = NULL;
+}
+
+static void
+free_hash_provider (gpointer key, gpointer value, gpointer user_data)
+{
+	CORBA_Environment ev;
+	gchar *iid = (gchar *) key;
+	GNOME_Database_Provider corba_provider = (GNOME_Database_Provider) value;
+
+	g_free (iid);
+
+	CORBA_exception_init (&ev);
+	CORBA_Object_release (corba_provider, &ev);
+	CORBA_exception_free (&ev);
 }
 
 static void
@@ -105,21 +120,13 @@ gda_client_finalize (GObject *object)
 	g_return_if_fail (GDA_IS_CLIENT (client));
 
 	/* free memory */
-	if (client->priv->iid != NULL)
-		g_free (client->priv->iid);
-	if (client->priv->corba_provider != NULL) {
-		CORBA_Environment ev;
-
-		CORBA_exception_init (&ev);
-		CORBA_Object_release (client->priv->corba_provider, &ev);
-		CORBA_exception_free (&ev);
-
-		client->priv->corba_provider = NULL;
-	}
-
 	g_list_foreach (client->priv->connections, (GFunc) gda_connection_close, NULL);
 	g_list_free (client->priv->connections);
 	client->priv->connections = NULL;
+
+	g_hash_table_foreach (client->priv->providers, (GHFunc) free_hash_provider, NULL);
+	g_hash_table_destroy (client->priv->providers);
+	client->priv->providers = NULL;
 
 	g_free (client->priv);
 	client->priv = NULL;
@@ -137,30 +144,11 @@ BONOBO_X_TYPE_FUNC_FULL (GdaClient,
  * gda_client_new
  */
 GdaClient *
-gda_client_new (const gchar *iid)
+gda_client_new (void)
 {
 	GdaClient *client;
-	CORBA_Environment ev;
-
-	g_return_val_if_fail (iid != NULL, NULL);
-
-	CORBA_exception_init (&ev);
 
 	client = g_object_new (GDA_TYPE_CLIENT, NULL);
-
-	/* activate the CORBA component */
-	client->priv->corba_provider = bonobo_get_object (
-		iid, "IDL:GNOME/Database/Provider:1.0", &ev);
-	if (BONOBO_EX (&ev)) {
-		CORBA_exception_free (&ev);
-		g_object_unref (G_OBJECT (client));
-		gda_log_error (_("Could not activate provider %s"), iid);
-		return NULL;
-	}
-
-	CORBA_exception_free (&ev);
-
-	client->priv->iid = g_strdup (iid);
 	return client;
 }
 
@@ -169,16 +157,25 @@ gda_client_new (const gchar *iid)
  */
 GdaConnection *
 gda_client_open_connection (GdaClient *client,
-			    const gchar *cnc_string,
+			    const gchar *dsn,
 			    const gchar *username,
 			    const gchar *password)
 {
 	GList *l;
 	GdaConnection *cnc;
+	GNOME_Database_Provider corba_provider;
 	GNOME_Database_Connection corba_cnc;
 	CORBA_Environment ev;
+	GdaDataSourceInfo *dsn_info;
 
 	g_return_val_if_fail (GDA_IS_CLIENT (client), NULL);
+
+	/* get the data source info */
+	dsn_info = gda_config_find_data_source (dsn);
+	if (!dsn_info) {
+		gda_log_error (_("Data source %s not found in configuration"), dsn);
+		return NULL;
+	}
 
 	/* search for the connection in our private list */
 	for (l = client->priv->connections; l; l = l->next) {
@@ -189,19 +186,41 @@ gda_client_open_connection (GdaClient *client,
 		tmp_usr = gda_connection_get_username (cnc);
 		tmp_pwd = gda_connection_get_password (cnc);
 
-		if (((!tmp_str && !cnc_string) || !strcmp (tmp_str, cnc_string)) &&
+		if (((!tmp_str && !dsn_info->cnc_string) || !strcmp (tmp_str, dsn_info->cnc_string)) &&
 		    ((!tmp_usr && !username) || !strcmp (tmp_usr, username)) &&
 		    ((!tmp_pwd && !password) || !strcmp (tmp_pwd, password))) {
 			g_object_ref (G_OBJECT (cnc));
+			gda_config_free_data_source_info (dsn_info);
 			return cnc;
 		}
 	}
 
-	/* not found, so create a new connection object */
+	/* try to find provider in our hash table */
+	corba_provider = g_hash_table_lookup (client->priv->providers, dsn_info->provider);
+	if (!corba_provider) {
+		/* not found, so load the new provider */
+		CORBA_exception_init (&ev);
+
+		corba_provider = bonobo_get_object (dsn_info->provider,
+						    "IDL:GNOME/Database/Provider:1.0",
+						    &ev);
+		if (BONOBO_EX (&ev)) {
+			gda_log_error (_("Could not activate object %s"), dsn_info->provider);
+			CORBA_exception_free (&ev);
+			gda_config_free_data_source_info (dsn_info);
+			return NULL;
+		}
+
+		g_hash_table_insert (client->priv->providers,
+				     g_strdup (dsn_info->provider),
+				     corba_provider);
+
+		CORBA_exception_free (&ev);
+	}
+
 	CORBA_exception_init (&ev);
 
-	corba_cnc = GNOME_Database_Provider_createConnection (
-		client->priv->corba_provider, &ev);
+	corba_cnc = GNOME_Database_Provider_createConnection (corba_provider, &ev);
 	if (BONOBO_EX (&ev)) {
 		CORBA_exception_free (&ev);
 		gda_log_error (_("Could not create connection component"));
@@ -210,7 +229,9 @@ gda_client_open_connection (GdaClient *client,
 
 	CORBA_exception_free (&ev);
 
-	cnc = gda_connection_new (client, corba_cnc, cnc_string, username, password);
+	cnc = gda_connection_new (client, corba_cnc, dsn_info->cnc_string, username, password);
+	gda_config_free_data_source_info (dsn_info);
+
 	if (!GDA_IS_CONNECTION (cnc))
 		return NULL;
 
