@@ -1,3 +1,14 @@
+2001-11-04  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-client.[ch]: don't make it an object attached to a specific
+	provider, but make it the main entry point for GDA clients
+
+	* gda-config.[ch] (gda_config_get_data_source_list):
+	(gda_config_find_data_source):
+	(gda_config_copy_data_source_info):
+	(gda_config_free_data_source_info):
+	(gda_config_free_data_source_list): new functions
+
 2001-11-03  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-data-model.[ch] (gda_data_model_get_column_title): new function
